# yolo-train

./: .gitignore  README.md  Taskfile.yml  pyproject.toml
assets/configs/: phantom-body.toml
src/: train.py
src/utils/: yolo_settings.py
